--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 $red: rgba(234, 0, 45, 1);
 $black: rgba(0, 0, 0, 1);
 $white: rgba(255, 255, 255, 1);
+$gray: rgba(242, 239, 235, 1);
 $CR: CirceRegular, Arial, Verdana, sans-serif;
 $CB: CirceBold, Arial, Verdana, sans-serif;
 $PfdR: PlayfairDisplayRegular, georgia, serif;
