--- a/src/templates/includes/courses.pug
+++ b/src/templates/includes/courses.pug
@@ -39,8 +39,9 @@ section.courses
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка")
-                div.courses__line
-                button Оставить заявку
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
 
         div.row-fluid.show-grid
             div.span12.courses__course.courses__course--bio
@@ -59,39 +60,55 @@ section.courses
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка") 
-
-                div.courses__line
-                button Оставить заявку
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
 
         div.row-fluid.show-grid
             div.span6.courses__course.courses__course--triding
                 div.type Видеокурс
                 h3 Тридинг
+                p Удаление нежелательных волос на лице и коррекция бровей нитью
+                ul
+                    li Подробная теория, демонстрация процедуры совместно с практикующим мастером из Баку с опытом работы нитью более 10 лет! 
+                    li Схемы работы на лице и вдоль линии бровей. 
+                    li Практические рекомендации по постановке руки и отработки чёткости линий. 
 
-                div.courses__line
-                button Оставить заявку
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
 
             div.span6.courses__course.courses__course--light
                 div.type Видеокурс
                 h3 Технология осветления бровей
+                p Теоретические основы осветления волоса бровей
+                ul
+                    li Разбор материалов, необходимых для процедуры осветления и последующего тонирования;
+                    li Демонстрация процедур на материалах «Refectocil 0» и «Jolen creme bleach»; 
+                    li Мягкое осветление, без раздражения кожи. Секреты тонирования после осветления для получения необходимых оттенков без пятен на коже.
 
-                div.courses__line
-                button Оставить заявку
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
 
         div.row-fluid.show-grid
             div.span6.courses__course.courses__course--lam
                 div.type Видеокурс
-                h3 Ламинирование ресниц и бровей
-
-                div.courses__line
-                button Оставить заявку
+                h3 Ламинирование ресниц и&nbsp;бровей
+                p Теория и&nbsp;демонстрация процедуры с&nbsp;поэтапной последовательностью. Секреты и&nbsp;правила работы для&nbsp;снижения себестоимости работы и&nbsp;повышения качества результата от&nbsp;процедуры. 
+                
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
 
             div.span6.courses__course.courses__course--botoks
                 div.type Фотокурс
                 h3 Ботокс для ресниц
-
-                div.courses__line
-                button Оставить заявку
+                p Следующая ступень в работе с натуральными ресницами после ламинирования. Последовательность этапов с фото отчетом по каждому.
+                
+                div.bottom
+                    div.courses__line
+                    button Оставить заявку
         
         div.row-fluid.show-grid
             div.span10.offset1
