--- a/src/templates/includes/footer.pug
+++ b/src/templates/includes/footer.pug
@@ -1,10 +1,14 @@
-footer.wrapper
-    div.social
-        a(href="https://instagram.com" target="_blank") Instagram
-        a(href="https://vk.com" target="_blank") VK
-    div.mail
-        span Пишите нам — 
-        span mail@gmail.com
-    div.delivery-payment 
-        span Информация о доставке и оплате
-    div.clear
+footer
+    div.wrapper
+        div.row-fluid.show-grid
+            div.span3 © 2016 – 2018 Хна «D’ajour»
+            div.span2
+                a(href="#") Соглашение на обработку персональных данных
+            div.span3.offset1
+                span
+                    | Разработка — 
+                    a(href="http://ketov.name" target="_blank") Юрий Кетов
+            div.span3.phone
+                a(href="tel:+73422045337") 
+                    span +7 (342) 
+                    | 204-53-37
