--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,6 +16,11 @@ html
         include includes/offer
         include includes/video
         include includes/courses
+        include includes/for
+        include includes/economy
+        include includes/reviews
+        include includes/author
+        include includes/form
         include includes/footer
        
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js")
