--- a/src/templates/includes/economy.pug
+++ b/src/templates/includes/economy.pug
@@ -4,6 +4,6 @@ section.economy
         p.comment Почему заниматься бровями выгодно
         div.row-fluid.show-grid
             div.span10.offset1
-                p.big-p Себестоимость одной процедуры татуажа — 14,5 рублей. Туда входит хна&nbsp;и&nbsp;расходники.
+                p.big-p Себестоимость одной процедуры оформления бровей от 14,5 рублей. Туда входит хна&nbsp;и&nbsp;расходники.
                 p.big-p В&nbsp;среднем процедура стоит 1000 руб. За&nbsp;день мастер обслуживает не&nbsp;менее 6 клиентов, за&nbsp;месяц — не&nbsp;менее 120 при&nbsp;5-дневной рабочей неделе. Среднемесячный доход мастера — 120 000 руб. при&nbsp;условии хорошего потока клиентов.
                 p.big-p Наш самый дорогой курс «Brow-мастер» и&nbsp;набор материалов для&nbsp;работы окупаются за&nbsp;9 процедур.
