--- a/src/templates/includes/footer.pug
+++ b/src/templates/includes/footer.pug
@@ -2,13 +2,13 @@ footer
     div.wrapper
         div.row-fluid.show-grid
             div.span3 © 2016 – 2018 Хна «D’ajour»
+            <!--div.span2
+                a(href="#") Соглашение на обработку персональных данных-->
             div.span2
-                a(href="#") Соглашение на обработку персональных данных
-            div.span3.offset1
                 span
                     | Разработка — 
                     a(href="http://ketov.name" target="_blank") Юрий Кетов
-            div.span3.phone
+            div.span7.phone
                 a(href="tel:+73422045337") 
                     span +7 (342) 
                     | 204-53-37
