--- a/src/templates/includes/for.pug
+++ b/src/templates/includes/for.pug
@@ -13,4 +13,4 @@ section.for
                 p Отправьте сотрудников на обучение. Броустудия с 5 мастерами и правильно выстроенными процессами в среднем приносит 300 000 руб. в месяц «чистыми».
             div.span3
                 h4 Девушек в декрете
-                p Многие начинают интересоваться татуажем во время беременности. Броумастер — идеальная профессия для работы дома при условии, что вы успешно выстроите продажи.
+                p Многие начинают интересоваться бровями во время беременности. Броумастер — идеальная профессия для работы дома при условии, что вы успешно выстроите продажи.
