--- a/src/templates/includes/header.pug
+++ b/src/templates/includes/header.pug
@@ -1,9 +1,9 @@
 header
     nav.wrapper
-        a(href="index.html") Школа D'ajour
-        a(href="index.html") Наши курсы
-        a(href="index.html") Для кого
-        a(href="index.html") Экономика профессии
-        a(href="index.html") Отзывы
-        a(href="index.html") Об авторе
-        a(href="index.html") Заявка на обучение
+        a.header__video(href="#video") Школа D'ajour
+        a.header__courses(href="index.html") Наши курсы
+        a.header__for(href="index.html") Для кого
+        a.header__economy(href="index.html") Экономика профессии
+        a.header__reviews(href="index.html") Отзывы
+        a.header__author(href="index.html") Об авторе
+        a.header__form(href="index.html") Заявка на обучение
