--- a/src/templates/includes/offer.pug
+++ b/src/templates/includes/offer.pug
@@ -2,6 +2,6 @@ section.offer
     h1 
         | Получите профессию 
         br 
-        | «броумастер» за 2 неделии
+        | «броумастер» за&nbsp;2&nbsp;неделии
     p.comment и зарабатывайте до 200 000 руб. в месяц на процедуре моделирования бровей
-    button Подробнее об экономике
+    button.offer__button Подробнее об экономике
