--- a/src/templates/includes/video.pug
+++ b/src/templates/includes/video.pug
@@ -1,4 +1,4 @@
-section.video
+section.video#video
     div.wrapper
         h2 Представляем школу D’ajour
         p.comment От создателей хны для биотатуажа D’ajour
