--- a/src/styles/blocks/author.scss
+++ b/src/styles/blocks/author.scss
@@ -8,3 +8,26 @@
         margin: 30px 0 0 0;
     }
 }
+
+@media(max-width: 1050px){
+    .author{
+        padding: 60px 0;
+    }
+}
+
+@media(max-width: 850px){
+    .author{
+        padding: 40px 0;
+        h2{
+            margin: 0 0 10px 0;
+        }
+    }
+}
+
+@media(max-width: 767px){
+    .author{
+        img{
+            margin: 27px 0 0 0;
+        }
+    }
+}
