--- a/src/styles/blocks/economy.scss
+++ b/src/styles/blocks/economy.scss
@@ -4,3 +4,36 @@
         margin: 0 0 30px 0;
     }
 }
+
+@media(max-width: 1050px){
+    .economy{
+        padding: 60px 0;
+        .big-p{
+            margin: 0 0 20px 0;
+        }
+    }
+}
+
+@media(max-width: 850px){
+    .economy{
+        padding: 40px 0;
+        .big-p{
+            margin: 0 0 20px 0;
+        }
+        .comment{
+            margin: 10px 0 25px;
+        }
+    }
+}
+
+@media(max-width: 500px){
+    .economy{
+        padding: 25px 0;
+        h2{
+            text-align: left;
+        }
+        .comment{
+            text-align: left;
+        }
+    }    
+}
