--- a/src/styles/blocks/reviews.scss
+++ b/src/styles/blocks/reviews.scss
@@ -41,3 +41,44 @@
         padding: 0 0 70px 0;
     }
 }
+
+@media(max-width: 1050px){
+    .reviews{
+        padding: 60px 0px 20px;
+        h2{
+            margin: 0 0 40px;
+        }
+        .row-fluid{
+            padding: 0 0 50px;
+        }
+    }
+}
+
+@media(max-width: 850px){
+    .reviews{
+        padding: 40px 0px 0px;
+        h2{
+            margin: 0 0 20px;
+        }
+        .row-fluid{
+            padding: 0 0 50px;
+        }
+    }
+}
+
+@media(max-width: 500px){
+    .reviews{
+        h2{
+            text-align: left;
+        }
+        img{
+            margin: 0 0 22px;
+        }
+        .span4{
+            margin: 0 0 40px 0;
+        }
+        .row-fluid{
+            padding: 0;
+        }
+    }
+}
