--- a/src/styles/blocks/video.scss
+++ b/src/styles/blocks/video.scss
@@ -8,3 +8,32 @@
         width: 100%;
     }
 }
+
+@media(max-width: 1050px){
+    .video{
+        padding: 60px 0 0 0;
+        iframe{
+            height: 500px;
+        }
+    }    
+}
+
+@media(max-width: 850px){
+    .video {
+        padding: 40px 0 0;
+        .comment{
+            margin: 10px 0 25px;
+        }
+        iframe{
+            height: 400px;
+        }
+    }
+}
+
+@media(max-width: 500px){
+    .video{
+        iframe{
+            height: 270px;
+        }
+    }
+}
