--- a/src/templates/includes/courses.pug
+++ b/src/templates/includes/courses.pug
@@ -9,26 +9,63 @@ section.courses
                     div.span6.courses__block.courses__block--browmaster1 
                         h4 Блок «Basic»
                         div.courses__block-list
+                            ul.ul-show
+                                li Профессиональный стандарт Броу-мастера;
+                                li Анатомические особенности лица и их взаимосвязь со&nbsp;строением бровей;
+                                li Антропологические особенности;
+                                li Строение кожи;
+                                li Анализ структуры волоса бровей и&nbsp;их реакция на&nbsp;химическое и&nbsp;механическое воздействие;
+                                li Рисунок роста волосков бровей;
+                                li Каркас брови – требования к&nbsp;составляющим брови;
+                                li Авторская разметка, основные точки для&nbsp;создания идеальной формы брови.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка")                                
                     div.span6.courses__block.courses__block--browmaster2 
                         h4 Блок «Золотое сечение»
                         div.courses__block-list
+                            ul.ul-show
+                                li Влияние бровей на&nbsp;остальные части лица по&nbsp;правилам золотого сечения;
+                                li Определение идеальных пропорций лица по маске красоты Макуарта;
+                                li Воздействие бровей на&nbsp;«золотые линии»;
+                                li 6 формул бровей по отрезкам золотого сечения;
+                                li Коррекция лица с&nbsp;помощью бровей на&nbsp;уровне пластического хирурга;
+                                li Исправление диспропорций лица и&nbsp;визуальная коррекция недостатков;
+                                li Отработка заданий на&nbsp;практических макетах.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка") 
 
                 div.row-fluid.courses__row
                     div.span6.courses__block.courses__block--browmaster3 
-                        h4 Блок «Сложные формы бровей и Асимметрия»
+                        h4 Блок «Сложные формы бровей и&nbsp;Асимметрия»
                         div.courses__block-list
+                            ul.ul-show
+                                li Схемы работы со&nbsp;сложными бровями: поврежденные брови, сложная текстура, нарушенный рост волосков;
+                                li Техники прореживания бровей, стимуляции роста;
+                                li Правила коррекции бровей, последовательность работы со&nbsp;сложными бровями;
+                                li Асимметрия бровей;
+                                li Исправление асимметрии лица с&nbsp;помощью линии бровей;
+                                li Визуальная коррекция и&nbsp;поиск симметрии;
+                                li Секреты построения одинаковых бровей;
+                                li Психологический подход к клиенту в&nbsp;поиске симметрии.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка")                                
                     div.span6.courses__block.courses__block--browmaster4 
-                        h4 Блок «Колористика. Техники работы с бровями»
+                        h4 Блок «Колористика. Техники работы с&nbsp;бровями»
                         div.courses__block-list
+                            ul.ul-show
+                                li Понятие температуры и&nbsp;цветотипа;
+                                li Анализ клиента по&nbsp;основным индикаторам цвета;
+                                li Психология цвета;
+                                li Колористика по цветовому кругу на&nbsp;примере популярных красителей;
+                                li Анализ базовых цветов и&nbsp;их совмещение для получения 50 оттенков коричневого;
+                                li Тонирование, микстоны, нейтрализаторы;
+                                li Осветление и&nbsp;окрашивание бровей;
+                                li Химический процесс в&nbsp;волосе под действием красителя;
+                                li Поддержание здорового уровня волоса, без&nbsp;агрессивного воздействия красителя;
+                                li Техники работы с пинцетом и нитью.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка") 
@@ -36,33 +73,72 @@ section.courses
                     div.span6.courses__block.courses__block--browmaster5 
                         h4 Блок «Практика»
                         div.courses__block-list
+                            ul.ul-show
+                                li Материаловеденье. Разбор косметички Броумастера от&nbsp;простого к&nbsp;сложному;
+                                li Дезинфекция и стерилизация. Все этапы и&nbsp;требования к обработке инструментов.
+                                li.ul-show--no-bg Демонстрация процедуры на 2 моделях:
+                                li.ul-show--no-bg 1. Разметка формы, подготовка к процедуре, техники коррекции, схемы работы с&nbsp;нитью, техника Тридинг, создание четкой линии с&nbsp;помощью пинцета. Окрашивание бровей краской в&nbsp;технике градиент (3Д эффект). Финальный макияж бровей.
+                                li.ul-show--no-bg 2. Демонстрация процедуры осветления и&nbsp;тонирования хной. Секреты осветления бровей и&nbsp;последующего тонирования на&nbsp;примере хны.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка")
+                    div.span6.courses__block
+                        h4 Варианты прохождения учебной программы:
+                        p 
+                            span.courses__b 1. Отдельными блоками. 
+                            | Стоимость отдельного блока — 1500 руб. К&nbsp;каждому блоку приложение в электроном виде (Учебное пособие, документы, практические задания на&nbsp;электронную почту). Именной сертификат о&nbsp;прохождении курса в&nbsp;формате для печати на&nbsp;электронную почту.
+                        p 
+                            span.courses__b 2. Весь курс, состоящий из 5 блоков, продолжительностью 5 часов 12 минут. 
+                            | Стоимость курса 5000 руб. К&nbsp;видео блокам высылается учебное пособие в&nbsp;печатном виде и&nbsp;именной сертификат Почтой России или ТК (на&nbsp;выбор). Дополнительные документы и&nbsp;инструкции в&nbsp;электроном виде.
+                            
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
 
         div.row-fluid.show-grid
             div.span12.courses__course.courses__course--bio
                 div.type Видеокурс
                 h3 Биотатуаж бровей хной
+                
                 div.row-fluid.courses__row
                     div.span6.courses__block.courses__block--bio1 
                         h4 Теория
                         div.courses__block-list
+                            ul.ul-show
+                                li Анатомические особенности кожи и волоса бровей, их реакция на окрашивание хной;
+                                li Механизм воздействия хны на слои кожи и структуру волоса;
+                                li Сравнительный анализ продуктов для Биотатуажа;
+                                li Разбор состава хны и свойства каждого ингредиента;
+                                li Колористика хны по цветовому кругу;
+                                li Схема смешивания оттенков;
+                                li 3 метода активации хны;
+                                li Техники Биотатуажа: графика, полутень, волосковая техника и и.д.;
+                                li 3 схемы расстяжки цвета для эффекта ОМБРЕ;
+                                li Правила «стойкости хны» и «чёткого нанесения»;
+                                li Информационное согласие клиентов на процедуру;
+                                li Ведение карты клиента.
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка")                                
                     div.span6.courses__block.courses__block--bio2 
                         h4 Демонстрация на 3 моделях
                         div.courses__block-list
+                            ul.ul-show
+                                li Основы Биотатуажа на примере теплой Шатенки «Четкая графика»;
+                                li Сложное колорирование холодная Блондинка;
+                                li Подростковое тонирование «Мягкий градиент».
                             div.courses__show 
                                 span.courses__show-text Показать полное содержание блока
                                 img.courses__show-img(src="assets/img/arrow.svg" alt="стрелочка") 
+
+                div.row-fluid.courses__row
+                    div.span6.courses__block
+                        h4 Стоимость курса — 2500 руб. Продолжительность — 3 часа
+                        p К&nbsp;видео высылается учебное пособие в&nbsp;печатном виде и&nbsp;именной сертификат Почтой России или ТК (на выбор). Дополнительные документы и&nbsp;инструкции в&nbsp;электроном виде.
+                        p Консультационное сопровождение без&nbsp;ограничения. Проверка домашнего задания и&nbsp;разбор ошибок на&nbsp;моделях онлайн.
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
 
         div.row-fluid.show-grid
             div.span6.courses__course.courses__course--triding
@@ -74,9 +150,14 @@ section.courses
                     li Схемы работы на лице и вдоль линии бровей. 
                     li Практические рекомендации по постановке руки и отработки чёткости линий. 
 
+                h4.courses__comment 
+                    | Стоимость курса — 2000 руб. 
+                    br
+                    | Продолжительность — 35 минут.
+
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
 
             div.span6.courses__course.courses__course--light
                 div.type Видеокурс
@@ -87,9 +168,14 @@ section.courses
                     li Демонстрация процедур на материалах «Refectocil 0» и «Jolen creme bleach»; 
                     li Мягкое осветление, без раздражения кожи. Секреты тонирования после осветления для получения необходимых оттенков без пятен на коже.
 
+                h4.courses__comment 
+                    | Стоимость курса — 2000 руб. 
+                    br
+                    | Продолжительность — 35 минут.
+
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
 
         div.row-fluid.show-grid
             div.span6.courses__course.courses__course--lam
@@ -97,18 +183,28 @@ section.courses
                 h3 Ламинирование ресниц и&nbsp;бровей
                 p Теория и&nbsp;демонстрация процедуры с&nbsp;поэтапной последовательностью. Секреты и&nbsp;правила работы для&nbsp;снижения себестоимости работы и&nbsp;повышения качества результата от&nbsp;процедуры. 
                 
+                h4.courses__comment 
+                    | Стоимость курса — 2000 руб. 
+                    br
+                    | Продолжительность — 30 минут.
+
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
 
             div.span6.courses__course.courses__course--botoks
                 div.type Фотокурс
                 h3 Ботокс для ресниц
                 p Следующая ступень в работе с натуральными ресницами после ламинирования. Последовательность этапов с фото отчетом по каждому.
                 
+                h4.courses__comment 
+                    | Стоимость курса — 1500 руб. 
+                    br
+                    | Стоимость ампулы Ботокс — 2500 руб.
+
                 div.bottom
                     div.courses__line
-                    button Оставить заявку
+                    button.courses__button Оставить заявку
         
         div.row-fluid.show-grid
             div.span10.offset1
